replaced zip file by knwf file

--- a/Handout/gettingstarted.tex
+++ b/Handout/gettingstarted.tex
@@ -312,12 +312,12 @@ Workflows can easily be created by a right click in the Workflow Explorer follow
 
 To be able to share a workflow with others, KNIME supports the import and export of complete workflows.
 To export a workflow, select it in the Workflow Explorer and select \menu{File > Export KNIME Workflow...}.
-KNIME will export workflows as a zip file containing all the information on nodes, their connections, and their configuration.
-Those zip files can again be imported by selecting \menu{File > Import KNIME Workflow...}.
+KNIME will export workflows as a knwf file containing all the information on nodes, their connections, and their configuration.
+Those knwf files can again be imported by selecting \menu{File > Import KNIME Workflow...}.
 
-\note{For your convenience we added all workflows discussed in this tutorial to the \directory{Workflows} folder on the USB Stick. Additionally the
-zip files can be found on our \href{https://github.com/OpenMS/Tutorials}{GitHub repository}.
-If you want to check your own workflow by comparing it to the solution or got stuck, simply import the full workflow from the corresponding zip file.}
+\note{For your convenience we added all workflows discussed in this tutorial to the \directory{Workflows} folder on the USB Stick. Additionally, the
+workflow files can be found on our \href{https://github.com/OpenMS/Tutorials}{GitHub repository}.
+If you want to check your own workflow by comparing it to the solution or got stuck, simply import the full workflow from the corresponding knwf file.}
 
 \subsubsection{Duplicating workflows}
 \label{sec:duplicate-wf}
